# BOT

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: master.yml
API/actions/: api.py
API/other/: user.py
API/other/schema/: user.py
API/positions/positions/: api.py
API/positions/positions/schema/: position.py
API/settings/ban/: api.py
API/settings/ban/schema/: ban.py
API/statistic/pnl/: api.py
API/statistic/schema/: pnl.py
conf/: base.py  conf.py  connect.py  middlewares.py  settings.py
service/: kb.py  sender.py
service/decorators/: auth.py  validate.py
service/exctract/: alpha.py  p2p.csv  pyproject.toml  read_csv.py  scheame.py  tink.py
service/exctract/fonts/tink/: demo.html
service/utils/: date.py  kb.py  responses.py  text.py
src/callbacks/positions/: func.py  kb.py
src/extract/: func.py  kb.py  state.py
src/glaz/: func.py  parse.py  state.py
src/index/: func.py  kb.py
src/index/menu/add/: func.py  state.py
src/index/menu/analiz/: func.py  kb.py  state.py
src/index/menu/pnl/: func.py  kb.py  state.py
src/index/menu/settings/ban/: func.py  kb.py  state.py
src/receipt/: func.py  state.py
