[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "www",email = "pyostr@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.12,<4"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "boto3 (>=1.40.72,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "httplib2 (>=0.31.0,<0.32.0)",
    "reportlab (>=4.4.4,<5.0.0)",
    "pymupdf (>=1.26.6,<2.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
