[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "www",email = "pyostr@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "reportlab (>=4.4.4,<5.0.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

